--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -6,6 +6,7 @@
           <ul>
               <li class="lead">Apple TV</li>
               <li class="lead">Netflix</li>
+              <li class="lead">Netflix India</li>
           </ul>
           <p class="lead">
               This is an Open Source Project created by <a href="https://harshana.xyz" target="_blank">Harshana</a>. All kinds of Feedbacks, Feature Requests, Issue Reporting &amp; Contribution
