--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,12 @@
 <div class="container-fluid" id="list">
-    <div class="row">
-        <div class="col-md-3 trailer-item" *ngFor="let index of [].constructor(8)">
-            <a href="https://www.youtube.com/watch?v=XQfeoRLvfqU" class="trailer-link" target="_blank">
+    <div class="row" *ngIf="trailers">
+        <div class="col-md-3 trailer-item" *ngFor="let trailer of trailers">
+            <a href="https://www.youtube.com/watch?v={{ trailer.id.videoId }}" class="trailer-link" target="_blank">
                 <div class="card" >
-                    <img src="https://i.ytimg.com/vi/XQfeoRLvfqU/mqdefault.jpg" class="card-img-top">
+                    <img src="{{ trailer.snippet.thumbnails.medium.url }}" class="card-img-top">
                     <div class="card-body">
-                    <p class="card-text">Defending Jacob — Official Trailer | Apple TV+</p>
+                    <p class="card-text trailer-title">{{ trailer.snippet.title }}</p>
+                    <p class="trailer-meta">{{ formatTimestamp(trailer.snippet.publishedAt) }} · {{ trailer.snippet.channelTitle }}</p>
                     </div>
                 </div>
             </a>
