--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 $primary: #ffffff;
+$trailerMeta: #868484;
 
 .navbar{
     background-color:$primary;
